--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Influencer Project</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Influencer Statistics</h1>
 <p>My first paragraph.</p>
 
 </body>
