--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <hr>
     <h2> Influencer Score VS Number of Followers <h2>
     <p> Is there a positive, statistically significant correlation between the number of followers an influencer has and their influence score? Cleaning up the unnecessary data, I narrowed down the data to two variables, the influencer score as the independent variable, and number of followers as the dependent variable. Looking at the data for the number of followers I found: the mean is 78,491,000. A six way tie for the mode: 33,600,000,  33,800,000,  36,000,000, 52,900,000,  55,100,000, and  68,100,000. The median is : 50,950,000, and the range is 33,400,000 - 485,200,000. Comparing followers to the influencer score, what we found was that there certainly is a low positive correlation between the variables, and I used a Pearson Correlation to figure this out. A Pearson Correlation Coefficient tells us how closely related two variables are from -1 to 1, in this case the correlation coefficient is 0.365, which is closer to 0 than it is to -1 or positive 1. We can conclude that there is a positive correlation however, it is not statistically significant.<p>
-<hr>
+<img src ="InfluencerScore to Followers.png" alt="ScoretoFollowers">
+      <hr>
     <h2> Influencer Score VS Average Likes <h2>
       
     
