--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
       
     
     <p> Now let's compare average likes to influence scores, so we can ask: Is there a positive, statistically significant correlation between the average likes an influencer has and their influence score? I narrowed down the data to two variables once more, the influencer score and the average likes. The mean average likes is: 1,785,050 per post. The mode for average likes is 1,100,000 and the median for average likes is also 1,100,000. Finally, the range was from 63,500 to15,400,000. Oddly enough, when I compared the variables to one another, I was able to conclude that there’s a positive correlation but it is extremely weak. The Pearson Correlation Coefficient is 0.048502, meaning that there is little to no correlation between average likes and an influencers score! <p>
-<hr>
+<img src ="InfluencerScore to AverageLikes.png" alt="ScoretoAverageLikes">
+      <hr>
       <h2> Influencer Score VS Total Likes <h2>
       <p> The next variable to compare to influencer scores is total likes, unlike average likes, total gives us the sum of all likes each influencer receive from all of their posts combined. This value could be comparable to influencer score, since more likes should equal a higher rated influencer. So, is there a positive, statistically significant correlation between the average likes an influencer has on a post and their influence score? I once again narrowed down the data to influencer scores and total likes. The mean total likes is 3,644,949,000, median is 2,050,000,000, and the mode is 1,500,000,000, the range is from 22,800,000 to 57,400,000,000.Just like the average likes, the correlation between total likes and influencer score is positive, but weak, in this case it is stronger compared to the last comparison. The Pearson Correlation Coeffiecient is 0.23498, meaning there’s a weak positive correlation between influencer scores and total likes <p>
-<hr>
+<img src ="InfluencerScore to TotalLikes.png" alt="ScoretoTotalLikes">
+        <hr>
         <h2> Influencer Score VS Total Posts <h2>
       <p> Finally, we will compare influencer score to number of posts, will there be a positive, statistically significant correlation between the total number of likes an influencer has and their influence score? The mean total posts is 3460.425, the mode is 10,000, and the median is 2100, and the range is from 20 to 16900. As you can see, the data is all over the place, and it is easy to conclude that the correlation between influencer score to posts is weak. The Pearson Correlation Coeffiecient is 0.168287. Oddly enough, there’s a stronger correlation compared to score and average likes. <p>
-<hr>
+<img src ="InfluencerScore to TotalPosts.png" alt="ScoretTotalPosts">
+          <hr>
           <h2> Conclusion <h2>
       <p> Overall, our findings tell us that there’s no significant correlation between influencer score and any of the variables that we listed. Why is that the case? It may be the popularity of an influencer outside of social media, some “influencers” are actually just corporations, so they receive less likes, but have a higher influencer score than individuals. We also have to take into account what an “influencer score” actually is, who’s opinion is it based off, and how was this data collected? There are also many variables within media that can affect how we look at influencers, controversy, a hiatus, ect. So, I can conclude that influencer score isn’t affected by likes and posts, but it may relate to psychological factors that needs to be considered. <p>
 
