--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <title>Influencer Project</title>
 </head>
+h1 {text-align: center;}
+h2 {text-align: center;}
+h3 {text-align: center;}  
+p {text-align: center;}
   
 <body style="background-color:powderblue;">
 
