--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
 <title>Influencer Project</title>
+<style>  
 h1 {text-align: center;}
 h2 {text-align: center;}
 h3 {text-align: center;}  
 p {text-align: center;}  
+</style>  
 </head>
   
   
