--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ p {text-align: center;}
 </head>
   
   
-<body style="background-color:powderblue;">
+<body style="background-color:darksalmon;">
 
 <hr>
   
