--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ People are constantly listening to music, whether it be in class, on the bus, or
 We first should determine the top music genres, to narrow down the music a majority of people listen to. So I asked, What are the top 5 music genres by average popularity from each artist on spotify? Using the database, I created a bar graph detailing the top 5 music genres and popularity. To clarify, the popularity rating is on a scale from 0-100 and it is based on the artist,genre, and specific song that is popular. So to begin, I had to find the average popularity rating for each artist and the genre of their song. Once I found the average popularity rating, then created the bar graph seen detailing the top music genres vs popularity. <mark>The most popular genre is dance with a popularity rating of 98, followed by rap, then pop, hip hop, and then reggaeton. </mark>Dance could be the most popular because of the upbeat energy the music brings. And something that could affect the 'feeling' of music is the key signature.
   
 </p2>
+  
+  <img src="MostPopularGenres1" alt="PopGenre">
 
 <h2>
   The most popular keys in music
