--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ We first should determine the top music genres, to narrow down the music a major
   
 </p2>
   
-  <img src="MostPopularGenres1" alt="PopGenre">
+  <img src="MostPopularGenres1.png" alt="PopGenre">
 
 <h2>
   The most popular keys in music
