--- a/index.html
+++ b/index.html
@@ -45,12 +45,28 @@ We first should determine the top music genres, to narrow down the music a major
   
 <p1>Key signatures don’t necessarily determine the ‘sadness’ or happiness’ of a key, it is valence. Valence is a scale that determines the musical positiveness of a track, on a scale from 0.0 to 1.0, where 1.0 is the most positive, valence determines the ‘feel’/’emotion’ of a track.</p1>
 
+</p>
+
+<img src="KeySignatureVSPopularity.png" alt="Key">
+
+</p>
+
+
+
+
   <h2>
   Music and Valence
   </h2>
 <p1>
   Valence may be the determining factor to why people may rate music highly. So asking another question, is there a correlation between valence and the popularity of a track? Creating a scatter plot with a line of best fit in the middle, I found odd results. I used a Pearson Correlation Coefficient with the data I found. A Pearson Correlation Coefficient measures the relationship between two variables on a scale of -1 to 1 where the closer the coefficient is to 0 the less correlated the variables are. <mark>In the case of popularity versus valence, they have a weak positive correlation coming in at 0.1409.</mark> I expected there to be a stronger correlation because the higher the valence the ‘happier’ the track. <mark>The track with the highest valence in the top 10 tracks was “Sunflower” by Post Malone, with a valence of 0.913, which was 6th in the top 10. Ariana Grande's “7 Rings” had a valence of 0.319.</mark> It seems that valence and popularity aren’t strongly correlated at all.
 </p1>
+
+
+</p>
+<img src="PopularityVSValence1.png" alt="Val">
+
+
+</p>
 
 <h2>
   Conclusions
