--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ I should first determine the top music genres, to narrow down the music a majori
   
   </p>
   
-  <img src="MostPopularGenres1.png" alt="PopGenre">
+  <img src="MostPopularGenres1.png" alt="PopGenre" class="center">
   
 
 <h2>
@@ -47,7 +47,7 @@ I should first determine the top music genres, to narrow down the music a majori
 
 </p>
 
-<img src="KeySignatureVSPopularity.png" alt="Key">
+<img src="KeySignatureVSPopularity.png" alt="Key" class="center">
 
 </p>
 
@@ -63,7 +63,7 @@ I should first determine the top music genres, to narrow down the music a majori
 
 
 </p>
-<img src="PopularityVSValence1.png" alt="Val">
+<img src="PopularityVSValence1.png" alt="Val" class="center">
 
 
 </p>
