--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@ I should first determine the top music genres, to narrow down the music a majori
 <p1> <mark> C and F are the most common Keys in music, where C is used 12% of the time and F is used 11% of the time. However, these keys are not the most popular subjectively, C# is the most popular key (subjectively), G# is the 2nd and F# is the 3rd. </mark></p>
   
 <p1>C# or Db is considered the saddest key in music, in the spotify database, the most popular song with a rating of 100 is “7 Rings” by Ariana Grande and it is in the key of Db.</p>
-  
+
+</p>
+<img src="download.jpg" alt="TYN">
+</p>
+
+
+
 <p1>Within the database there are some holes, the popularity is quite iffy, for lack of a better word. Popularity is based on the track and the artist, the most common key is C, yet it is a key that isn’t even in the top 10 tracks (according to the database). It could be because of the popularity rating, which I will get into later.</p>
   
 <p1>Key signatures don’t necessarily determine the ‘sadness’ or happiness’ of a key, it is valence. Valence is a scale that determines the musical positiveness of a track, on a scale from 0.0 to 1.0, where 1.0 is the most positive, valence determines the ‘feel’/’emotion’ of a track.</p1>
