--- a/index.html
+++ b/index.html
@@ -69,9 +69,14 @@ I should first determine the top music genres, to narrow down the music a majori
 
 
 </p>
-<img src="PopularityVSValence1.png" alt="Val" class="center">
-
-
+<div class="row">
+  <div class="column">
+    <img src="PopularityVSValence1.png" alt="Val" class="center">
+  </div>
+  <div class="column">
+    <img src="unnamed.jpg" alt="Forest">
+  </div>
+</div>
 </p>
 
 <h2>
