--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ I should first determine the top music genres, to narrow down the music a majori
     <img src="PopularityVSValence1.png" alt="Val" class="center">
   </div>
   <div class="column">
-    <img src="unnamed.jpg" alt="Forest">
+    <img src="unnamed.png" alt="Forest">
   </div>
 </div>
 </p>
