--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ I should first determine the top music genres, to narrow down the music a majori
 </p>
 <div class="row">
   <div class="column">
-    <img src="PopularityVSValence1.png" alt="Val" class="center">
+    <img src="PopularityVSValence1.png" alt="Val">
   </div>
   <div class="column">
     <img src="unnamed.png" alt="Forest">
