--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@ I should first determine the top music genres, to narrow down the music a majori
 <p1>C# or Db is considered the saddest key in music, in the spotify database, the most popular song with a rating of 100 is “7 Rings” by Ariana Grande and it is in the key of Db.</p>
 
 </p>
-<img src="download.jpg" alt="TYN" class="center">
+
+<div class="row">
+  <div class="column">
+    <img src="download.jpg" alt="TYN">
+  </div>
+  <div class="column">
+    <img src="dflat.png" alt="Forest">
+  </div>
+</div>
 </p>
 
 
