--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ I should first determine the top music genres, to narrow down the music a majori
 
 <div class="row">
   <div class="column">
-    <img src="download.jpg" alt="TYN">
+    <img src="download.jpg" alt="TYN" class="center">
   </div>
   <div class="column">
-    <img src="dflat.png" alt="Forest">
+    <img src="dflat.png" alt="Forest" class="center">
   </div>
 </div>
 </p>
