--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ I should first determine the top music genres, to narrow down the music a majori
 </p>
 <div class="row">
   <div class="column">
-    <img src="PopularityVSValence1.png" alt="Val">
+    <img src="PopularityVSValence1.png" alt="Val" class = "center">
   </div>
   <div class="column">
-    <img src="unnamed.png" alt="Forest">
+    <img src="unnamed.png" alt="yes" class = "center">
   </div>
 </div>
 </p>
