--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I should first determine the top music genres, to narrow down the music a majori
 
 </p>
 
-<img src="KeySignatureVSPopularity.png" alt="Key" class="center">
+<img src="Test1.png" alt="Key" class="center">
 
 </p>
 
